--- a/compose.yaml
+++ b/compose.yaml
@@ -11,8 +11,14 @@ services:
   server:
     build:
       context: .
+      target: development
     ports:
       - 8080:8080
+      - 8000:8000
+    develop:
+      watch:
+        - action: rebuild
+          path: .
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
