--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>java-ci-cd</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>java-ci</name>
-    <description>java-ci</description>
+    <description>java-ci-cd</description>
     <url/>
     <licenses>
         <license/>
