--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,33 +6,33 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          registry: crpi-9t66pyx5tr44wo4w.cn-shanghai.personal.cr.aliyuncs.com
-          username: ${{ vars.ALIBABA_USERNAME }}
-          password: ${{ secrets.ALIBABA_PASSWORD }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Build and test
-        uses: docker/build-push-action@v6
-        with:
-          target: test
-          load: true
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          platforms: linux/amd64,linux/arm64
-          push: true
-          target: final
-          tags: crpi-9t66pyx5tr44wo4w.cn-shanghai.personal.cr.aliyuncs.com/${{ vars.ALIBABA_USERNAME }}/${{ github.event.repository.name }}:latest
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v3
+#        with:
+#          registry: crpi-9t66pyx5tr44wo4w.cn-shanghai.personal.cr.aliyuncs.com
+#          username: ${{ vars.ALIBABA_USERNAME }}
+#          password: ${{ secrets.ALIBABA_PASSWORD }}
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#      - name: Build and test
+#        uses: docker/build-push-action@v6
+#        with:
+#          target: test
+#          load: true
+#      - name: Build and push
+#        uses: docker/build-push-action@v6
+#        with:
+#          platforms: linux/amd64,linux/arm64
+#          push: true
+#          target: final
+#          tags: crpi-9t66pyx5tr44wo4w.cn-shanghai.personal.cr.aliyuncs.com/${{ vars.ALIBABA_USERNAME }}/${{ github.event.repository.name }}:latest
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+#    needs: build
     steps:
       - name: Copy compose.yaml to server
         uses: appleboy/scp-action@v0.1.7
@@ -41,5 +41,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.KEY }}
-          source: "deploy/compose.yaml"
+          source: "./deploy/compose.yaml"
           target: /home/${{ secrets.USERNAME }}/
+          debug: true
