--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
     runs-on: ubuntu-latest
 #    needs: build
     steps:
+      - name: List repository contents
+        run: ls ${{ github.workspace }}
       - name: Copy compose.yaml to server
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -43,4 +45,3 @@ jobs:
           key: ${{ secrets.KEY }}
           source: "${{ github.workspace }}/deploy/compose.yaml"
           target: /home/${{ secrets.USERNAME }}/
-          debug: true
