--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,10 @@ jobs:
     runs-on: ubuntu-latest
 #    needs: build
     steps:
+      - name: Check
+        run: |
+          cd ${{ github.workspace }}
+          ls .
       - name: Copy compose.yaml to server
         uses: appleboy/scp-action@v0.1.7
         with:
