--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,7 @@ jobs:
     runs-on: ubuntu-latest
 #    needs: build
     steps:
-      - name: Check
-        run: |
-          cd ${{ github.workspace }}
-          ls .
+      - uses: actions/checkout@v4
       - name: Copy compose.yaml to server
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -45,5 +42,5 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.KEY }}
-          source: "${{ github.workspace }}/../deploy/compose.yaml"
+          source: "compose.yaml"
           target: /home/${{ secrets.USERNAME }}/
