--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
 #    needs: build
     steps:
       - uses: actions/checkout@v4
+      - run: ls ${{ github.workspace }}
       - name: Copy compose.yaml to server
         uses: appleboy/scp-action@v0.1.7
         with:
