feat: delete compose.yaml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,3 +56,4 @@ jobs:
             echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login --username lunaelf --password-stdin crpi-9t66pyx5tr44wo4w.cn-shanghai.personal.cr.aliyuncs.com
             docker compose pull
             docker compose up -d
+            rm -rf /home/${{ secrets.USERNAME }}/deploy
